[build-system]
requires = [
    "setuptools>=83.0.0",
    "wheel>=0.47.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "qvlink"
version = "2.15.7"
description = ""
requires-python = ">=3.12"
authors = [
    { name = "Helmut Konrad Schewe", email = "helmutus@outlook.com" },
]
dependencies = [
    # "abel>=0.7.0,<1.0.0",
    "configos>=1.0.4,<2.0.0",
    "iamraw>=4.92.0,<5.0.0",
    "pdflog>=1.0.2,<2.0.0",
    "protoerror>=3.20.2,<4.0.0",
    "pycryptodome>=3.23.0,<4.0.0",
    "utilo>=2.109.1,<3.0.0",
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.readme]
file = "README"
content-type = "text/markdown"

[project.optional-dependencies]
dev = [
    "hoverpower==1.5.2",
    "rawmaker>=2.40.5,<3.0.0",
    "utilotest==1.0.4",
]

[project.urls]
Homepage = "https://github.com/anaticulae/qvlink"
Repository = "https://github.com/anaticulae/qvlink"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.changelog]
mode = "init"
output_format = "md"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG"

[tool.semantic_release.commit_parser_options]
patch_tags = [
    "build",
    "chore",
    "ci",
    "deps",
    "docs",
    "fix",
    "perf",
    "refactor",
    "style",
    "test",
]
minor_tags = [
    "feat",
]

[tool.setuptools.packages.find]
where = [
    ".",
]
include = [
    "qvlink",
]
exclude = [
    "tests*",
]

[tool.hoverpower]
packages = [
    "DOCU",
]
